# linux_details

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CODEOWNERS  publish-linux-details-macros.yml  publish-linux-details.yml  publish.yml  rust-clippy.yml
linux_details/: Cargo.toml  README.md
linux_details/src/: distro.rs  family.rs  init.rs  lib.rs  main.rs  package_manager.rs
linux_details_macros/: Cargo.toml  README.md
linux_details_macros/src/: lib.rs
src/: distro.rs  family.rs  main.rs  package_manager.rs
src/distro/: mod.rs
src/distro/family/: mod.rs
src/distro/init/: mod.rs
src/distro/package_manager/: mod.rs
src/distro/src/: main.rs
