[package]
name = "linux_details"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linux_details"
path = "src/main.rs"

[lib]
name = "linux_details"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3.4.0"