[package]
name = "linux_details_macros"
version = "0.1.0"
edition = "2021"
description = "proc-macros for linux_details"
license = "MIT"
homepage = "https://github.com/martintc/linux_details"
repository = "https://github.com/martintc/linux_details"
readme = "README.md"
keywords = ["system", "linux", "details"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
syn = { version = "1.0.98", features = ["full"] }
quote = "1.0.20"